# webpack-wasm-reference-types-1.82-poc

./: README.md  package-lock.json  package.json  tsconfig.json
app/: webpack-config.create.ts  webpack-config.debug.ts  webpack-server.ts  webpack.config.ts
app/src/main/js/: index.html  main.tsx
wasm-lib/: Cargo.toml  build.sh
wasm-lib/.cargo/: config.toml
wasm-lib/src/: lib.rs  stuff.rs
