[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.90" }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.66"
tracing = "0.1.40"
tracing-wasm = "0.2.1"

[dependencies.web-sys]
version = "0.3.66"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'RequestCredentials',
    'Response',
    'Window',
    'CanvasRenderingContext2d',
    'TextMetrics',
]

[profile.release]
lto = true
# Tell `rustc` to optimize for small binary size.
opt-level = "z"
codegen-units = 1
# Temporarily work around the reference types issue by not including
# debug symbols and stripping.
# See https://github.com/webpack/webpack/issues/15566
#debug = true
strip = true

[package.metadata.wasm-pack.profile.release]
# https://github.com/WebAssembly/binaryen/blob/version_119/test/lit/help/wasm-opt.test
wasm-opt = ['-Oz', '--enable-bulk-memory']


[profile.dev]
lto = "thin"
opt-level = 1
# Temporarily work around the reference types issue by not including
# debug symbols and stripping.
# See https://github.com/webpack/webpack/issues/15566
#debug = true
strip = true

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
